--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,200 @@
     margin: 0;
     padding: 0;
 }
+
+:root {
+    font-family: 'Roboto', sans-serif;
+}
+
+.site-content {
+    display: grid;
+    width: 100%;
+    height: 100vh;
+    grid-template: repeat(5, 1fr) / repeat(5, 1fr);
+    border: 1px solid black;
+
+    grid-template-areas: "dashboard-leftside header-section header-section header-section header-section"
+    "dashboard-leftside . . . ."
+    "dashboard-leftside . . . ."
+    "dashboard-leftside . . . ."
+    "dashboard-leftside . . . .";
+}
+
+#dashboard-leftside {
+    grid-area: dashboard-leftside;
+    min-width: 350px;
+    border: 1px solid black;
+    color: white;
+    background-color: #38bdf8;
+}
+
+.dashboard-flexcolumn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 50px;
+    padding-left: 20px;
+
+    color: black;
+}
+
+.dashboard-iconAndLogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    padding-top: 20px;
+}
+
+#dashboard-icon{
+    width: 100px;
+    height: auto;
+}
+
+.dashboard-iconAndLogo > h1 {
+    font-size: 40px;
+}
+
+.dashboard-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.dashboard-icon {
+    height: 25px;
+}
+
+.dashboard-button-single {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    gap: 20px;
+}
+
+.dashboard-support-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+#header-section {
+    grid-area: header-section;
+    min-height: 250px;
+    border: 1px solid black;
+}
+
+.header-upper {
+    display: flex;
+    height: 100px;
+}
+
+.header-upper-left {
+    display: flex;
+    width: 60%;
+}
+
+
+.searchbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    width: 100%;
+    border: 1px solid black;
+    align-self: center;
+}
+
+.search {
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 25px;
+    width: 50%;
+    background-color: rgba(211, 211, 211, 0.397);
+}
+
+.header-upper-right {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    gap: 20px;
+
+    width: 40%;
+    border: 1px solid pink;
+}
+
+.icon {
+    height: auto;
+    width: 30px;
+}
+
+.header-lower {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-lower-left {
+    display: flex;
+    gap: 20px;
+    padding-left: 40px;
+}
+
+.header-lower-left-column {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    justify-content: center;
+}
+
+.profile-picture-big {
+    width: 100px;
+    height: auto;
+    border: 1px solid black;
+    border-radius: 100%;
+}
+
+.profile-picture-small {
+    width: 50px;
+    height: auto;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.header-subtext {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header-text {
+    font-size: 34px;
+    font-weight: bold;
+}
+
+.header-lower-right {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    padding-right: 40px;
+}
+
+.header-button {
+    height: 40px;
+    width: 80px;
+    border-radius: 25px;
+    border: 0;
+    background-color: #38bdf8;
+    color: white;
+    font-weight: bolder;
+}
